# Mini-RAG-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  llm_rag_cpp.cpp  llm_rag_cpp.h
api/: agent.py  api_server.py  eval.py  memory.py  tools.py
auth/: auth_service.cpp  auth_service.h  http_auth.cpp  http_auth.h  password_hasher.cpp  password_hasher.h  rbac_service.cpp  rbac_service.h
cli/: cli.cpp  cli.h
database/: sqlite_db.cpp  sqlite_db.h
evaluation/: eval.py
include/: httplib.h
llm/: llm_client.cpp  llm_client.h
rag/: bm25_retriever.cpp  bm25_retriever.h  embedder (2).cpp  embedder.cpp  embedder.h  hybrid_retriever.cpp  hybrid_retriever.h  loader.cpp  loader.h  prompt.cpp  prompt.h  retriever.cpp  retriever.h  sqlite_retriever.cpp  sqlite_retriever.h  vector_retriever.cpp  vector_retriever.h  vector_utils.cpp  vector_utils.h
utils/: save_as_cpp_index.py  test.py  vector_server.py
web/: package-lock.json  package.json  vite.config.js
web/src/: App.vue
web/src/api/: index.js
web/src/components/: ChatView.vue  EvalView.vue
web/src/router/: index.js
